added boilerplate android project + first theme impl

--- a/AndroidApp/app/src/main/res/values-de/strings.xml
+++ b/AndroidApp/app/src/main/res/values-de/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">Android App</string>
     <string name="edit_message">Nachricht eingeben</string>
     <string name="button_send">Senden</string>
+    <string name="button_next">Weiter</string>
 </resources>
