--- a/AndroidApp/app/src/main/res/values/strings.xml
+++ b/AndroidApp/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="login_failed">"Login failed"</string>
     <string name="button_next">Next</string>
     <string name="enter_your_name">Enter your Name</string>
+    <string name="user_logged_in_message">User %s logged in</string>
 </resources>
